--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -30,7 +30,8 @@
     <widget class="pg_rules" name="page_2"/>
     <widget class="pg_twoplayers" name="page_3"/>
     <widget class="pg_tournament" name="page_4"/>
-    <widget class="pg_allplayers" name="page_5"/>
+    <widget class="pg_sandbox" name="page_6"/>
+    <widget class="QWidget" name="page_5"/>
    </widget>
    <widget class="QPushButton" name="welcomeButton">
     <property name="geometry">
@@ -104,7 +105,7 @@
      <x>0</x>
      <y>0</y>
      <width>800</width>
-     <height>17</height>
+     <height>21</height>
     </rect>
    </property>
   </widget>
@@ -136,9 +137,9 @@
    <container>1</container>
   </customwidget>
   <customwidget>
-   <class>pg_allplayers</class>
+   <class>pg_sandbox</class>
    <extends>QWidget</extends>
-   <header>pg_allplayers.h</header>
+   <header>pg_sandbox.h</header>
    <container>1</container>
   </customwidget>
  </customwidgets>
