animation draft in pg_mistakes

--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -29,8 +29,9 @@
     <widget class="pg_welcome" name="page_1"/>
     <widget class="pg_rules" name="page_2"/>
     <widget class="pg_twoplayers" name="page_3"/>
-    <widget class="pg_tournament" name="page_4"/>
-    <widget class="pg_allplayers" name="page_5"/>
+    <widget class="pg_mistakes" name="page_4"/>
+    <widget class="pg_tournament" name="page_5"/>
+    <widget class="pg_allplayers" name="page_6"/>
    </widget>
    <widget class="QPushButton" name="welcomeButton">
     <property name="geometry">
@@ -74,7 +75,7 @@
    <widget class="QPushButton" name="tournamentButton">
     <property name="geometry">
      <rect>
-      <x>390</x>
+      <x>500</x>
       <y>510</y>
       <width>51</width>
       <height>41</height>
@@ -87,7 +88,20 @@
    <widget class="QPushButton" name="allplayerButton">
     <property name="geometry">
      <rect>
-      <x>500</x>
+      <x>610</x>
+      <y>510</y>
+      <width>51</width>
+      <height>41</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string/>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="mistakesButton">
+    <property name="geometry">
+     <rect>
+      <x>390</x>
       <y>510</y>
       <width>51</width>
       <height>41</height>
@@ -139,6 +153,12 @@
    <class>pg_allplayers</class>
    <extends>QWidget</extends>
    <header>pg_allplayers.h</header>
+   <container>1</container>
+  </customwidget>
+  <customwidget>
+   <class>pg_mistakes</class>
+   <extends>QWidget</extends>
+   <header>pg_mistakes.h</header>
    <container>1</container>
   </customwidget>
  </customwidgets>
