--- a/pg_twoplayers.ui
+++ b/pg_twoplayers.ui
@@ -293,8 +293,8 @@
     <rect>
      <x>230</x>
      <y>130</y>
-     <width>41</width>
-     <height>31</height>
+     <width>40</width>
+     <height>30</height>
     </rect>
    </property>
    <property name="frameShape">
@@ -309,8 +309,8 @@
     <rect>
      <x>430</x>
      <y>130</y>
-     <width>51</width>
-     <height>31</height>
+     <width>40</width>
+     <height>30</height>
     </rect>
    </property>
    <property name="frameShape">
@@ -527,8 +527,8 @@ li.checked::marker { content: &quot;\2612&quot;; }
   <widget class="QTextEdit" name="text2">
    <property name="geometry">
     <rect>
-     <x>300</x>
-     <y>53</y>
+     <x>290</x>
+     <y>40</y>
      <width>104</width>
      <height>91</height>
     </rect>
@@ -550,6 +550,99 @@ li.checked::marker { content: &quot;\2612&quot;; }
 &lt;/style&gt;&lt;/head&gt;&lt;body style=&quot; font-family:'Segoe Print'; font-size:9pt; font-weight:400; font-style:normal;&quot;&gt;
 &lt;p align=&quot;center&quot; style=&quot; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;opponent:&lt;/p&gt;
 &lt;p align=&quot;center&quot; style=&quot; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;your total score:&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="score_total">
+   <property name="geometry">
+    <rect>
+     <x>400</x>
+     <y>71</y>
+     <width>40</width>
+     <height>21</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string/>
+   </property>
+  </widget>
+  <widget class="QLabel" name="show_copycat">
+   <property name="geometry">
+    <rect>
+     <x>360</x>
+     <y>30</y>
+     <width>61</width>
+     <height>51</height>
+    </rect>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">border-image: url(:/image/copycat_hr.png);</string>
+   </property>
+   <property name="text">
+    <string/>
+   </property>
+  </widget>
+  <widget class="QLabel" name="show_cheater">
+   <property name="geometry">
+    <rect>
+     <x>350</x>
+     <y>40</y>
+     <width>61</width>
+     <height>51</height>
+    </rect>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">border-image: url(:/image/cheater_hr.png);</string>
+   </property>
+   <property name="text">
+    <string/>
+   </property>
+  </widget>
+  <widget class="QLabel" name="show_cooperator">
+   <property name="geometry">
+    <rect>
+     <x>370</x>
+     <y>40</y>
+     <width>61</width>
+     <height>51</height>
+    </rect>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">border-image: url(:/image/cooperator_hr.png);</string>
+   </property>
+   <property name="text">
+    <string/>
+   </property>
+  </widget>
+  <widget class="QLabel" name="show_grudger">
+   <property name="geometry">
+    <rect>
+     <x>370</x>
+     <y>40</y>
+     <width>61</width>
+     <height>51</height>
+    </rect>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">border-image: url(:/image/grudger_hr.png);</string>
+   </property>
+   <property name="text">
+    <string/>
+   </property>
+  </widget>
+  <widget class="QLabel" name="show_detective">
+   <property name="geometry">
+    <rect>
+     <x>350</x>
+     <y>30</y>
+     <width>61</width>
+     <height>51</height>
+    </rect>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">border-image: url(:/image/detective_hr.png);</string>
+   </property>
+   <property name="text">
+    <string/>
    </property>
   </widget>
   <zorder>machine_11</zorder>
@@ -584,6 +677,12 @@ li.checked::marker { content: &quot;\2612&quot;; }
   <zorder>machine_00</zorder>
   <zorder>text1</zorder>
   <zorder>text2</zorder>
+  <zorder>score_total</zorder>
+  <zorder>show_copycat</zorder>
+  <zorder>show_cheater</zorder>
+  <zorder>show_cooperator</zorder>
+  <zorder>show_grudger</zorder>
+  <zorder>show_detective</zorder>
  </widget>
  <resources/>
  <connections/>
